fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ figure {
 #fh5co-content-section,
 #fh5co-work-section_2,
 #fh5co-blog-section {
-  padding: 7em 0;
+  padding-top: 7em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-work-section,
